# alzheimer-disease-prediction

./: README.md  best_model.joblib  pyproject.toml  requirements.txt  session_store.db  stats.json
conf/base/: catalog.yml  parameters.yml  parameters_data_engineering.yml
docs/source/: conf.py  index.rst
notebooks/: data_exploration.ipynb
src/alzheimers_prediction/: __init__.py  __main__.py
src/alzheimers_prediction/pipelines/data_engineering/: nodes.py  pipeline.py
src/alzheimers_prediction/pipelines/data_science/: nodes.py  pipeline.py
tests/pipelines/data_engineering/: test_pipeline.py
